# geo-to-excel

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
scripts/: build_exe.bat  build_exe.ps1
src/geo_to_excel/: __init__.py  app.py
tests/: mermoz nord fibre.dxf  mermoz nord fibre.kml  test_geo_to_excel.py
