[project]
name = "geo-to-excel"
version = "1.0.0"
description = "Convertisseur KMZ / KML / DXF vers Excel au format exportations ouvrages reseau fibre"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Yann" },
]

dependencies = [
    "openpyxl>=3.1",
    "ezdxf>=1.4",
    "pyproj>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyinstaller>=6.0",
]

[project.scripts]
geo-to-excel = "geo_to_excel.app:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["geo_to_excel"]

[tool.coverage.report]
exclude_lines = [
    "if __name__",
    "class App",
    "def _build_",
    "def _browse",
    "def _on_proj",
    "def _on_detect",
    "def _run_auto",
    "def _get_epsg",
    "def _update_progress",
    "def _start_convert",
    "def _cancel_convert",
    "def _do_convert",
    "def _on_done",
    "def main",
    "import tkinter",
    "from tkinter",
    "FONT_FAMILY",
    "if sys.platform",
]
